k8s-exp/vhingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-host-ingress
  namespace: default
spec:
  rules:
    - host: blue.example.com
      http:
        paths:
        - backend:
            service:
              name: web-service
              port:
                number: 80
          path: "/"
          pathType: ImplementationSpecific
    - host: green.example.com
      http:
        paths:
        - backend:
            service:
              name: green-app
              port:
                number: 80
          path: "/"
          pathType: ImplementationSpecific
